[package]
name = "site24x7_exporter"
version = "0.4.5-alpha.0"
authors = ["Sven-Hendrik Haase <svenstaro@gmail.com>"]
description = "A Prometheus compatible exporter for site24x7.com"
edition = "2018"
license = "MIT"
repository = "https://github.com/svenstaro/site24x7_exporter"
publish = false

[profile.release]
lto = true
codegen-units = 1

[dependencies]
dotenv = { version = "0.15.0" }
reqwest = { version = "0.10", features = ["json", "rustls-tls"], default-features = false }
prometheus = "0.11"
structopt = "0.3"
http = "0.2"
simplelog = "0.9"
log = "0.4"
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
serde_path_to_error = "0.1"
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "0.13" }
lazy_static = "1.0"
strum = "0.20"
strum_macros = "0.20"
regex = "1"
