[package]
name = "site24x7_exporter"
version = "0.6.1-alpha.0"
authors = ["Sven-Hendrik Haase <svenstaro@gmail.com>"]
description = "A Prometheus compatible exporter for site24x7"
edition = "2018"
license = "MIT"
repository = "https://github.com/svenstaro/site24x7_exporter"
publish = false

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[dependencies]
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"], default-features = false }
prometheus = { version = "0.13", default-features = false }
structopt = "0.3"
http = "0.2"
simplelog = "0.10"
log = "0.4"
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
serde_path_to_error = "0.1"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
lazy_static = "1.0"
strum_macros = "0.22"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1.0"
assert_cmd = "2.0"
port_check = "0.1"
